Уведомление админу, если проихошла ошибка подтверждения

--- a/data/static/html/admin_approve.html
+++ b/data/static/html/admin_approve.html
@@ -165,12 +165,13 @@
             body: JSON.stringify(data),
           })
             .then((response) => {
-              if (!response.ok) {
-                throw new Error("Network response was not ok");
-              }
-              return response.json();
+              return Promise.all([response.json(), response.ok]);
             })
-            .then((data) => {
+            .then(([data, ok]) => {
+              if (!ok) {
+                throw new Error(data.detail);
+              }
+
               console.log("Решение успешно отправлено на сервер:", data);
               // Удаление строки из таблицы
               var row = button.closest("tr");
@@ -178,6 +179,8 @@
             })
             .catch((error) => {
               console.error("Ошибка при отправке решения:", error);
+              alert(error);
+              location.reload();
             });
         }
       });
