--- a/data/static/html/admin_approve.html
+++ b/data/static/html/admin_approve.html
@@ -10,10 +10,10 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div class="m-4">
       <h2>Подтверждение документов</h2>
-      <div class="row">
-        <div class="col">
+      <div>
+        <div>
           <table class="table">
             <thead>
               <tr>
