--- a/data/static/html/admin_competition.html
+++ b/data/static/html/admin_competition.html
@@ -9,10 +9,10 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div class="m-4">
       <h2>Конкурс</h2>
-      <div class="row">
-        <div class="col">
+      <div>
+        <div>
           <table class="table">
             <thead>
               <tr>
@@ -150,7 +150,7 @@ function sendDecision(button, userId, status, reason = null) {
             reason: reason,
           };
 
-          fetch("/admin/approve", {
+          fetch("/admin/competition", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
