--- a/data/static/html/send_docs.html
+++ b/data/static/html/send_docs.html
@@ -192,7 +192,7 @@
           вас о том, были ли они приняты или нужно внести изменения.
         </div>
 
-        <button type="submit" class="btn btn-primary">Загрузить</button>
+        <button type="submit" class="btn btn-primary mb-4">Загрузить</button>
       </form>
     </div>
     <script>
