--- a/data/static/html/fill_data.html
+++ b/data/static/html/fill_data.html
@@ -114,7 +114,7 @@ endblock %} {% block base_with_status_content %}
         >
         <input
           type="{{ field.type }}"
-          class="form-control"
+          class="form-control automatic-form-field"
           id="{{ field.id }}"
           name="{{ field.name }}"
           placeholder="{{ field.placeholder }}"
@@ -122,13 +122,45 @@ endblock %} {% block base_with_status_content %}
         />
       </div>
       {% endfor %}
-
       <div class="mb-3">
-        <input type="checkbox" id="hasLaptop" name="hasLaptop" {% if
-        known_data[hasLaptop] %} checked {% endif %}" />
-        <label for="hasLaptop" class="form-label ml-1"
-          >У меня есть ноутбук, который могу приносить на занятия</label
-        >
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            id="hasLaptop"
+            name="hasLaptop"
+          />
+          <label for="hasLaptop" class="form-check-label"
+            >У меня есть ноутбук, который могу приносить на занятия</label
+          >
+        </div>
+      </div>
+      <div class="mb-3">
+        <h3>Льготы</h3>
+        {% for discount in discounts %}
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input discount-checkbox"
+            type="checkbox"
+            id="discount-{{ discount.id }}"
+            name="{{ discount.id }}"
+            {%
+            if
+            discount.id
+            in
+            selectedDiscounts
+            %}
+            checked
+            {%
+            endif
+            %}
+          />
+          <label class="form-check-label" for="discount-{{ discount.id }}"
+            >{{ discount.desc }}</label
+          >
+        </div>
+        <br />
+        {% endfor %}
       </div>
 
       <button type="submit" class="btn btn-primary mb-4">
@@ -137,6 +169,8 @@ endblock %} {% block base_with_status_content %}
     </form>
 
     <script>
+      {% if
+        known_data['hasLaptop'] %} $("#hasLaptop").prop("checked", true) {% endif %}
       function download(url, filename) {
         fetch(url)
           .then((response) => response.blob())
@@ -156,12 +190,16 @@ endblock %} {% block base_with_status_content %}
 
         var userData = {};
 
-        for (var i = 0; i < formElements.length; i++) {
-          var element = formElements[i];
-          userData[element.name] = element.value;
+        for (let field of $(".automatic-form-field")) {
+          userData[field.name] = field.value;
         }
 
         userData["hasLaptop"] = document.getElementById("hasLaptop").checked;
+        userData["discounts"] = [];
+
+        for (let d of $(".discount-checkbox:checked")) {
+          userData["discounts"].push(d.name);
+        }
 
         // Проводим валидацию для поля birthDate
         if (userData.hasOwnProperty("birthDate")) {
