--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -1,1 +1,61 @@
-ADMIN DASHBOARD
+{% extends "base.html" %} {% block title %} Личный кабинет Администратора {%
+endblock %} {% block base_content %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+<div class="container mt-5">
+  <h1>Панель администратора</h1>
+  <div class="row">
+    <div class="col-md-8">
+      <p>Вы вошли как {{admin_email}}</p>
+      <ol class="list-group w-50">
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <a href="/admin/approve" class="fw-bold">Подтверждение заявок</a>
+            <br>
+            Проверка документов и данных
+          </div>
+          <span class="badge text-bg-primary rounded-pill">{{badges.approve}}</span>
+        </li>
+
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <a href="/admin/competition" class="fw-bold">Зачисление</a>
+            <br>
+            Зачисление на основе конкурса
+          </div>
+          <span class="badge text-bg-primary rounded-pill">{{badges.competition}}</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <a href="/error" class="fw-bold">Просмотр учеников</a>
+            <br>
+            Просмотр и изменение данных
+          </div>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <a href="/admin/manage_programs" class="fw-bold">Редактировать программы</a>
+            <br>
+            Создать, утвердить, реализовать
+          </div>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <a href="/admin/statictics" class="fw-bold">Статистика</a>
+            <br>
+            Инструменты статистики
+          </div>
+        </li>
+      </ol>
+    </div>
+  </div>
+</div>
+
+</html>
+
+{% endblock %}
