--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -12,14 +12,16 @@ endblock %} {% block base_content %}
   <div class="row">
     <div class="col-md-8">
       <p>Вы вошли как {{admin_email}}</p>
-      <ol class="list-group w-50">
+      <ol class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
             <a href="/admin/approve" class="fw-bold">Подтверждение заявок</a>
             <br>
             Проверка документов и данных
           </div>
+          {% if badges.approve > 0 %}
           <span class="badge text-bg-primary rounded-pill">{{badges.approve}}</span>
+          {% endif %}
         </li>
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -28,7 +30,9 @@ endblock %} {% block base_content %}
             <br>
             Зачисление на основе конкурса
           </div>
+          {% if badges.competition > 0 %}
           <span class="badge text-bg-primary rounded-pill">{{badges.competition}}</span>
+          {% endif %}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
